--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 
+/* Common styles */
+
 html,
 body {
   margin: 0;
@@ -15,6 +17,8 @@ body {
 body {
   font-family: "Roboto", sans-serif;
 }
+
+/* Homepage styles */
 
 .bg {
   background-image: url("../images/bg.jpg");
@@ -82,6 +86,27 @@ body {
 .bg-gray {
   background-color: #c4c4c4;
 }
+
+/* Resume page styles */
+
+.logo-text {
+  color: #0000ff;
+  font-size: 1.5rem;
+}
+
+/* .resume-main-section {
+  height: calc(100vh - 150px);
+} */
+
+.address-font {
+  font-size: 1.3rem;
+}
+
+.timeline-font {
+  font-size: 1.2rem;
+}
+
+/* Responsiveness */
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
