--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -42,24 +42,9 @@ body {
   align-items: flex-end;
 }
 
-.profile-main-section {
-  height: calc(100vh - 120px);
-}
-
-.profile-section {
-  width: 100%;
-  height: 47rem;
-}
-
 .hidden {
   width: auto;
   min-height: 25rem;
-}
-
-.print-icon {
-  position: fixed;
-  right: 100px;
-  bottom: 100px;
 }
 
 .heading {
@@ -109,9 +94,11 @@ body {
   font-size: 1.5rem;
 }
 
-/* .resume-main-section {
-  height: calc(100vh - 150px);
-} */
+.print-icon {
+  position: fixed;
+  right: 80px;
+  bottom: 50px;
+}
 
 .address-font {
   font-size: 1.3rem;
@@ -119,6 +106,15 @@ body {
 
 .timeline-font {
   font-size: 1.2rem;
+}
+
+.profile-main-section {
+  height: calc(100vh - 120px);
+}
+
+.profile-section {
+  width: 100%;
+  height: 47rem;
 }
 
 /* Responsiveness */
@@ -131,5 +127,78 @@ body {
 
   .main-section {
     padding-right: 3.5rem;
+  }
+}
+
+/* Small devices (portrait, 768px and down */
+@media only screen and (max-width: 768px) {
+  .profile-main-section {
+    margin-top: 1.3rem;
+  }
+
+  .profile-section {
+    height: 25.5rem;
+  }
+
+  .company {
+    display: flex;
+    justify-content: center;
+  }
+
+  .print-icon {
+    position: fixed;
+    right: 1rem;
+    bottom: 0.6rem;
+  }
+
+  .header {
+    font-size: 1rem;
+  }
+
+  .line {
+    width: 10%;
+  }
+
+  .print-icon img {
+    width: 2rem;
+  }
+
+  .company img {
+    width: 1.2rem;
+    margin-right: 3px;
+  }
+
+  .logo-text {
+    font-size: 1rem;
+  }
+  
+  .address-font {
+    display: flex;
+    justify-content: center;
+    font-size: 0.8rem;
+  }
+
+  .heading {
+    font-size: 0.9rem;
+  }
+
+  .heading-2 {
+    font-size: 0.8rem;
+  }
+  
+  .timeline-font {
+    display: flex;
+    justify-content: center;
+    font-size: 0.8rem;
+    margin-bottom: 0.7rem;
+  }
+
+  .details-section p {
+    font-size: 0.8rem;
+  }
+
+  .list-text {
+    font-size: 0.8rem;
+    margin-bottom: 0.7rem;
   }
 }
